@@ -61,8 +61,6 @@ extern int scm_ints_disabled;
 
 extern void scm_error SCM_P ((SCM key, char *subr, char *message,
 			      SCM args, SCM rest)) SCM_NORETURN;
-extern void (*scm_error_callback) SCM_P ((SCM key, char *subr,
-					  char *message, SCM args, SCM rest));
 extern SCM scm_error_scm SCM_P ((SCM key, SCM subr, SCM message,
 			      SCM args, SCM rest)) SCM_NORETURN;
 extern SCM scm_strerror (SCM err);
